Revision history for Image::Scale

0.02
        - Improved fixed-point performance for x86.
        - Fixes for test failures.

0.01    2010-09-08 23:40:00
        - Initial release.
