@@ -2,6 +2,7 @@ Revision history for Image::Scale
 
 0.02
         - Improved fixed-point performance for x86.
+        - Fixed crash when reading JPEG images with Exif thumbnails.
         - Fixes for test failures.
 
 0.01    2010-09-08 23:40:00
